major changes tmdb revamped && style