@@ -273,9 +273,6 @@ select {
   width: 100%;
   height: 100%;
   background: black;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
 }
 
 .season-select select{
@@ -283,13 +280,14 @@ select {
   color: white;
   border: none;
   border-radius: 10px;
-  padding: 0.5rem;
+  padding: 1rem;
 }
 
 .episodes-list{
   display: grid;
   grid-auto-flow: column;  
   gap: 1rem;
+  padding: 1rem 0rem;
   overflow-x: auto;
   -ms-overflow-style: none; 
   scrollbar-width: none; 
@@ -302,12 +300,18 @@ select {
 
 .episode{
   width: 300px;
-  height: 330px;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+  border-radius: 0px 10px 10px 0px ;
+
 }
 
 .episode img{
   width: 300px;
   height: 180px;
+  object-fit: cover;
   border-radius: 10px;
 }
 
