@@ -1,1 +1,3 @@
 major changes tmdb revamped && style
+
+-- asigned download link corresponds to the ep. only fetch data if download link available. some css fixes and changes 
